# gai_final_project

./: .env.example  LICENSE  README.md  TODO.md  activate.sh  debug_scheduling.py  env.example  fix_monday_slots.py  monitor_logs.py  mvc_monitor.py  packages.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.sh  setup.py  test_complete_core_agent.py  test_core_agent_simple.py  test_database_simple.py  test_debug_validation.py  test_monday_scheduling.py  test_scheduling_advisor_simple.py  test_single_scenario.py  test_streamlit_simple.py  test_unified_scheduling.py
.cursor/rules/: langchain.mdc  mvc-architecture.mdc  projectguidance.mdc  prompt-as-files.mdc  todo.mdc  updatetodo.mdc  usage-of-keywords.mdc
.streamlit/: config.toml
app/: __init__.py  main.py
app/modules/: __init__.py
config/: __init__.py  phase1_settings.py
data/: db_Tech.sql  local_chromadb_backup.json  recruitment.db
data/conversations/: 0177cd92-74c6-42fb-b528-70b751e00f4b.json  02ca91b3-efee-424e-b42d-24c371529b4d.json  038fbba3-b6c6-4cff-899c-35dccccb1b3a.json  041f40be-369b-40ce-bbfd-ad9608d353b8.json  0abd1c69-ab11-414b-9dc3-e67b46d0ed36.json  0b99fb8d-5928-4566-a52e-4bfa26892b0d.json  0f8e9170-cb45-4373-ae74-9b49ddab6766.json  14da76dc-dbad-4de2-88da-d8a2aa289dcf.json  18d12b35-915b-463b-81dc-8d99b4b60fb8.json  1a5bcd32-52fe-4fef-b3c8-c806b6512313.json  1f8d32dd-7cfa-4311-9fa2-00219a90aa33.json  20d1e6e1-8b86-4aca-aab9-5a8057d9d4a0.json  234ea55a-bcd2-41d2-9286-ea3f7db2c02a.json  245fa93a-a7a5-4335-b031-caa1ba016af6.json  24939331-5b2a-4729-ac2c-673257e0a0ed.json  275e5a1a-77ad-4f88-8a53-4a2513054d84.json  2ac41a72-2657-4af2-8a4c-b8f54c4f339c.json  2b623e00-05e4-4af0-ac55-d55a8e4734c9.json  2d97e5d4-1c2d-4d33-b5ea-b7d064e0e414.json  2ea194a8-bfca-4d40-a61e-07064c526838.json  30a28e23-9be3-4b10-807a-9139dd082bbc.json  32c5078f-2d54-4f27-9c65-2130f05e5754.json  341802be-b95e-4471-ad74-182c5287f203.json  3655cdf2-7a2d-486d-968e-20cdcd17c58f.json  37a761f3-3efe-442b-83c9-a8c4b1ad3e3f.json  3ca64347-3e76-4a40-9564-fec520fe27e8.json  3d174a32-80da-4fa6-bb7a-d4e66c92b3a8.json  3ef72c6e-8033-44d7-bd1d-a65b000266e0.json  3fca0fe8-a4c9-41e0-a95c-7fc576499250.json  402efe5e-b606-4b09-9629-20c5e657b5c1.json  47b06f34-963c-439f-a386-1c3aa27ba2d6.json  4c57a9a6-277c-40d0-9a12-bfd7ea97f48e.json  4e619c09-c55d-4118-aace-e13bdb5c39dc.json  502f6f98-52fd-42da-8fb3-258b3e1fc323.json  50bf7344-a4c7-4842-901d-e58dc28fdf75.json  534c8239-3e65-4f77-9b13-120d0f5448b5.json  54b26f88-9c75-42c3-9515-2c21d4ce18d6.json  55645778-192b-4f8b-914b-42288d8a5019.json  55e90c94-391a-4a74-810d-f10f6ea11905.json  55f63c74-812f-4f3e-aec9-335cff87f15d.json  (+66 more)
data/messages/: test_context_messages.json
data/vector_db/: chroma.sqlite3
deployment/: DEPLOYMENT_GUIDE.md  README_DEPLOYMENT.md  deploy_setup.py  deployment_report.json  requirements_streamlit.txt  streamlit_config.toml  streamlit_secrets_template.toml
docs/: API_REFERENCE.md  PRESENTATION_MATERIALS.md  USER_MANUAL.md
fine_tuning/: README_fine_tuning.md  exit_advisor_tuning.py  training_data_prep.py
fine_tuning/data/: exit_advisor_finetune.jsonl  exit_advisor_test.jsonl
resources/: GAI Final Project.md  db_Tech.sql  sms_conversations.json
src/: __init__.py
streamlit_app/: __init__.py  streamlit_main.py
tests/: __init__.py  run_phase3_5_evaluation.py  test_core_agent.py  test_core_agent_eval.py  test_database.py  test_evals.ipynb  test_evaluation.py  test_example.py  test_exit_advisor.py  test_exit_advisor_eval.py  test_info_advisor.py  test_optimized_performance.py  test_phase3_5_simple.py  test_simple_performance_fix.py  test_vector_db.py
(+32 files in other folders)
